carregando os cursos

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -74,10 +74,7 @@
                     required
                   >
                     <!-- tem que ter um value sem nada para que funcione na submissão do formulário-->
-                    <option value="" selected>Escolha</option>
-                    <option value="1">Java</option>
-                    <option value="2">JavaScript</option>
-                    <option value="3">C#</option>
+                    <option value="" selected>Escolha um curso</option>
                   </select>
                 </div>
               </div>
